--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -3,7 +3,8 @@
   padding: 80px 0;
 }
 
-.info-row {
+.info-row,
+.ticket-row {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -22,9 +23,16 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
+  margin-bottom: 25px;
 }
 
-.info-col {
+.ticket-row {
+  padding-top: 10px;
+  border-top: 1px dashed #4d4d4d;
+}
+
+.info-col,
+.ticket-col {
   -webkit-order: 0;
   -ms-flex-order: 0;
   order: 0;
