--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -26,6 +26,10 @@
   margin-bottom: 25px;
 }
 
+.info-row {
+  color: darken($white, 50%);
+}
+
 .ticket-row {
   padding-top: 10px;
   border-top: 1px dashed #4d4d4d;
