--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 
-$white : #FFFFFF;
-$black : #000000;
-$green : #86AC7A;
+$white     : #FFFFFF;
+$black     : #000000;
+$green     : #86AC7A;
+$selection : rgba(134, 172, 122, .25);
