--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,6 +1,8 @@
 // Colors
 
-$white     : #FFFFFF;
-$black     : #000000;
+$white     : #EFD7CD;
+$black     : #12130E;
 $green     : #86AC7A;
-$selection : rgba(134, 172, 122, .25);
+$orange    : #AA5B28;
+$gray      : #8B8B85;
+$selection : rgba(139, 139, 133, .5);
