--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,4 +1,20 @@
+.movies {
+  position: relative;
+  width: 100%;
+  &:before {
+    position: absolute;
+    pointer-events: none;
+    height: 100%;
+    width: 100%;
+    content: "";
+    left: 0;
+    top: 0;
+    background: url('../img/grain.png');
+  }
+}
+
 .movie-tickets {
+  position: relative;
   width: 100%;
   padding: 80px 0;
 }
@@ -28,7 +44,6 @@
   h4 {
     margin: 0;
     padding: 0;
-    text-shadow: $green 0 -1px 20px;
   }
   h4 {
     font-style: italic;
@@ -41,7 +56,7 @@
 .ticket-row {
   padding-top: 15px;
   &:not(:first-child) {
-    border-top: 1px dashed rgba(134, 172, 122, .25);
+    border-top: 1px dashed $selection;
   }
 }
 
