Work on styles and add logo

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -5,4 +5,5 @@ $black     : #12130E;
 $green     : #86AC7A;
 $orange    : #AA5B28;
 $gray      : #8B8B85;
-$selection : rgba(139, 139, 133, .5);
+$selection : rgba(170, 91, 40, .50);
+$border    : rgba(139, 139, 133, .50);
