--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -18,7 +18,21 @@ html, body {
 
 body {
   color: $white;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.page-wrap {
+  position: relative;
   background: $black;
   background-size: 100%;
-  font-family: 'Source Sans Pro', sans-serif;
+  &:before {
+    position: absolute;
+    pointer-events: none;
+    height: 100%;
+    width: 100%;
+    content: "";
+    left: 0;
+    top: 0;
+    background: url('../img/grain.png');
+  }
 }
