--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,8 +5,10 @@ header {
   .logo {
     position: relative;
     display: block;
-    width: 50px;
-    height: 25px;
     margin: 0 auto;
+    svg {
+      width: 50px;
+      height: 25px;
+    }
   }
 }
