--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -5,5 +5,10 @@ $black     : #12130E;
 $green     : #86AC7A;
 $orange    : #AA5B28;
 $gray      : #8B8B85;
-$selection : rgba(170, 91, 40, .50);
-$border    : rgba(139, 139, 133, .50);
+$selection : rgba(110, 111, 153, .25);
+$border    : rgba(154, 153, 170, .25);
+
+$body      : #2A2A43;
+$header    : #9F9DC6;
+$copy      : #C4CCDB;
+$hit       : #D36C81;
