--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -12,6 +12,12 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .info-modal-close {
@@ -27,9 +33,6 @@
 }
 
 .info-modal-container {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
   max-width: 600px;
   padding: 0 20px;
   padding: 0 1.25rem;
