--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -18,6 +18,7 @@ html, body {
 
 body {
   position: relative;
+  font-size: 16px;
   color: $copy;
   font-family: 'Source Sans Pro', sans-serif;
 }
