--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -5,10 +5,10 @@ $black     : #12130E;
 $green     : #86AC7A;
 $orange    : #AA5B28;
 $gray      : #8B8B85;
-$selection : rgba(110, 111, 153, .25);
-$border    : rgba(154, 153, 170, .25);
+$selection : rgba(147, 138, 130, .25);
+$border    : rgba(147, 138, 130, .25);
 
-$body      : #2A2A43;
-$header    : #9F9DC6;
-$copy      : #C4CCDB;
-$hit       : #D36C81;
+$body      : #211F1F;
+$header    : #AA9F96;
+$copy      : #FCEADE;
+$hit       : #938A82;
