Work on new styles and favicons

--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -19,8 +19,8 @@ html, body {
 body {
   position: relative;
   font-size: 16px;
-  color: $copy;
-  background: $body;
-  font-family: 'Source Sans Pro', sans-serif;
+  color: $black;
+  background: $white;
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
 }
