--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 
-$white     : #EFD7CD;
+$white     : #F7F8F9;
 $black     : #12130E;
 $green     : #86AC7A;
 $orange    : #AA5B28;
@@ -8,7 +8,7 @@ $gray      : #8B8B85;
 $selection : rgba(147, 138, 130, .25);
 $border    : rgba(147, 138, 130, .25);
 
-$body      : #211F1F;
+$body      : #ECEEF1;
 $header    : #AA9F96;
-$copy      : #FCEADE;
-$hit       : #938A82;
+$copy      : #2B71D9;
+$hit       : #A5ACB7;
