--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -24,6 +24,14 @@
 	transform: #{$args};
 }
 
+@mixin transition($args) {
+  -webkit-transition: #{$args};
+  -moz-transition: #{$args};
+  -ms-transition: #{$args};
+  -o-transition: #{$args};
+  transition: #{$args};
+ }
+
 
 
 /* Grid
