--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -7,9 +7,13 @@ footer {
   margin: 0 auto;
   padding: 30px 0;
   text-align: center;
-  background: $body;
+  background: $black;
   span {
-    color: $header;
+    color: $white;
     cursor: pointer;
+    @include transition(all 300ms ease-in-out);
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
