--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -2,5 +2,11 @@ header {
   position: relative;
   width: 100%;
   padding: 30px 0;
-  color: $header;
+  text-align: center;
+}
+
+.logo {
+  display: block;
+  margin: 0 auto;
+  @include size(46px, 42px);
 }
