--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 
 $white     : #F7F8F9;
-$black     : #12130E;
+$black     : #000000;
 $green     : #86AC7A;
 $orange    : #AA5B28;
 $gray      : #8B8B85;
