--- a/assets/scss/helpers/_maps.scss
+++ b/assets/scss/helpers/_maps.scss
@@ -8,6 +8,12 @@ $h1-font-sizes: (
   1024px : 12em
 );
 
+$h1-headroom-sizes: (
+  null  : 32px,
+  320px : 2em,
+  480px : 4em
+);
+
 $h2-font-sizes: (
   null  : 18px,
   480px : 1.125em
