--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,21 @@
 header {
-  position: relative;
+  position: fixed;
   width: 100%;
   padding: 30px 0;
   text-align: center;
+  z-index: 2;
+  @include transition(all 300ms ease-in-out);
+  h1 {
+    @include transition(all 300ms ease-in-out);
+  }
+  &.unpinned,
+  &.pinned {
+    background: $white;
+    padding: 15px 0;
+    h1 {
+      @include font-size($h1-headroom-sizes);
+    }
+  }
 }
 
 .logo {
