Adjust bottom padding

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -43,15 +43,15 @@
 .movies {
   position: relative;
   width: 100%;
-  padding: 100px 0;
+  padding: 100px 0 125px;
   @include screen-between(480px, 768px) {
     padding: 130px 0;
   }
   @include screen-between(768px, 1024px) {
-    padding: 175px 0;
+    padding: 175px 0 150px;
   }
   @include screen-above(1024px) {
-    padding: 275px 0;
+    padding: 275px 0 150px;
   }
 }
 
