--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -18,6 +18,7 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  @include transition(all 300ms ease-in-out);
 }
 
 .info-modal-close {
@@ -25,7 +26,7 @@
 }
 
 .close-info-modal {
-  display: none;
+  @include transform(translateY(100%));
 }
 
 .stop-scroll {
