--- a/assets/scss/base/_animate.scss
+++ b/assets/scss/base/_animate.scss
@@ -56,13 +56,19 @@
   }
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .animated {
   animation-duration: 1s;
   animation-fill-mode: both;
-}
-
-.animated.infinite {
-  animation-iteration-count: infinite;
 }
 
 .animated.hinge {
@@ -75,4 +81,8 @@
 
 .bounceInUp {
   animation-name: bounceInUp;
+}
+
+.fadeIn {
+  animation-name: fadeIn;
 }
