Initial style changes

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -4,7 +4,7 @@ $white     : #F7F8F9;
 $black     : #000000;
 $green     : #86AC7A;
 $orange    : #AA5B28;
-$gray      : #8B8B85;
+$gray      : #EEEEEE;
 $selection : rgba(147, 138, 130, .25);
 $border    : rgba(147, 138, 130, .25);
 
