--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -67,6 +67,10 @@
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
+  padding: 15px 0;
+  &:not(:first-of-type) {
+    border-top: 1px solid $gray;
+  }
   h2,
   h3,
   h4 {
@@ -82,15 +86,6 @@
       text-align: right;
     }
   }
-}
-
-.movie-tickets {
-  border-top: 2px solid $gray;
-}
-
-.ticket-row {
-  padding: 15px 0;
-  border-bottom: 2px solid $gray;
 }
 
 .ticket-col {
