--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -7,9 +7,9 @@ footer {
   margin: 0 auto;
   padding: 30px 0;
   text-align: center;
-  background: $black;
+  background: $white;
   span {
-    color: $white;
+    color: $black;
     cursor: pointer;
     @include transition(all 300ms ease-in-out);
     &:hover {
