--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -9,11 +9,14 @@ footer {
   text-align: center;
   background: $white;
   span {
-    color: $black;
+    color: $white;
     cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #63BB67;
     @include transition(all 300ms ease-in-out);
     &:hover {
-      text-decoration: underline;
+      background-color: #F94F4F;
     }
   }
 }
