--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -5,16 +5,28 @@ p {
 }
 
 h1 {
+  @include font-size($h1-font-sizes);
   font-weight: 500;
   margin: 0;
-  @include font-size($h1-font-sizes);
 }
 
 h2 {
+  @include font-size($h2-font-sizes);
   font-weight: 500;
   letter-spacing: 0.05em;
   margin: 0.05em -1.2em 0.05em 0;
-  @include font-size($h2-font-sizes);
+}
+
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 0;
+}
+
+h3,
+h4 {
+  color: $hit;
 }
 
 h3,
