--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,7 +1,5 @@
 $white: #ffffff;
-$black: #1d292b;
-$green: #86ac7a;
-$red: #d15159;
+$black: #2f302f;
 $gray: #b7bbb4;
 $selection: rgba(147, 138, 130, 0.25);
 $border: rgba(147, 138, 130, 0.25);
@@ -9,3 +7,4 @@ $body: $black;
 $header: #aa9f96;
 $copy: #2b71d9;
 $hit: $gray;
+$yellow: #efc954;
