--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,7 +3,6 @@
   position: fixed;
   width: 100%;
   padding: 30px 0;
-  text-align: center;
   z-index: 2;
 
   h1 {
@@ -12,7 +11,7 @@
 
   &.unpinned,
   &.pinned {
-    background: $white;
+    background: $black;
     padding: 15px 0;
 
     h1 {
