Work on clean-up

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,5 +1,5 @@
 $white: #ffffff;
-$black: #2f302f;
+$black: #1a1c23;
 $gray: #b7bbb4;
 $selection: rgba(147, 138, 130, 0.25);
 $border: rgba(147, 138, 130, 0.25);
