--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -6,5 +6,5 @@ $border: rgba(147, 138, 130, 0.25);
 $body: $black;
 $header: #aa9f96;
 $copy: #2b71d9;
-$hit: $gray;
+$hit: #282a35;
 $yellow: #efc954;
