--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -4,13 +4,10 @@
   padding: 150px 0 100px;
 }
 
-.data__grid {
-  @include cols;
-}
-
-.data__grid__item {
-  @include make-flex(6);
-  position: relative;
+.data__chart {
+  padding: 50px;
+  border-radius: 10px;
+  background-color: $hit;
 }
 
 .movies {
@@ -46,6 +43,11 @@
     }
     color: $white;
   }
+}
+
+.movies__grid {
+  @include cols;
+  margin: 0;
 }
 
 .movies__ticket__col {
