--- a/assets/scss/helpers/_mixins.scss
+++ b/assets/scss/helpers/_mixins.scss
@@ -30,7 +30,27 @@
   -ms-transition: #{$args};
   -o-transition: #{$args};
   transition: #{$args};
- }
+}
+
+@mixin ratio($width: 1, $height: 1) {
+  position: relative;
+
+  &::before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+
+  > .content,
+  > .inside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
 
 
 
