Work on entries

--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -2,9 +2,9 @@ $white: #ffffff;
 $black: #2f302f;
 $gray: #b7bbb4;
 $selection: rgba(147, 138, 130, 0.25);
-$border: rgba(147, 138, 130, 0.25);
-$body: $black;
+$border: #978fa5;
+$body: #0f1532;
 $header: #aa9f96;
 $copy: #2b71d9;
-$hit: $gray;
-$yellow: #efc954;
+$hit: #9d54ad;
+$yellow: #72cAA8;
