--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -28,12 +28,8 @@ body {
   font-size: 16px;
   color: $white;
   background: $body;
+  line-height: 1.5;
   font-family: "Roboto", sans-serif;
-}
-
-h1,
-h2 {
-  color: $yellow;
 }
 
 canvas {
