--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -8,3 +8,7 @@ $header: #aa9f96;
 $copy: #2b71d9;
 $hit: #282a35;
 $yellow: #efc954;
+
+$dark-purple: #152236;
+$light-purple: #19263c;
+$very-light-purple: #253450;
