--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -27,8 +27,9 @@ body {
   position: relative;
   font-size: 16px;
   color: $white;
-  background: $body;
+  background: #eee;
   line-height: 1.5;
+  font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
 
