--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,32 +1,29 @@
-h3,
-h4,
-p {
-  @include font-size($site-font-size);
-}
-
 h1 {
   @include font-size($h1-font-sizes);
-  font-weight: 500;
   margin: 0;
 }
 
 h2 {
   @include font-size($h2-font-sizes);
-  font-weight: 500;
   letter-spacing: 0.05em;
   margin: 0.05em -1.2em 0.05em 0;
 }
 
-h2,
-h3,
 h4 {
+  margin-top: 0;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3 {
   margin: 0;
   padding: 0;
+  font-weight: 400;
 }
 
 h3,
 h4,
-h5,
 p {
-  font-weight: 400;
+  @include font-size($site-font-size);
 }
