--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -27,7 +27,7 @@ body {
   position: relative;
   font-size: 16px;
   color: $white;
-  background: #eee;
+  background: #232428;
   line-height: 1.5;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
