--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -26,8 +26,8 @@ body {
 body {
   position: relative;
   font-size: 16px;
-  color: $white;
-  background: #232428;
+  color: $black;
+  background: $white;
   line-height: 1.5;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
