--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,14 +1,6 @@
-$white: #ffffff;
-$black: #3b4148;
+$white: #fff;
+$black: #000;
 $gray: #b7bbb4;
 $selection: rgba(147, 138, 130, 0.25);
 $border: rgba(147, 138, 130, 0.25);
 $body: $black;
-$header: #aa9f96;
-$copy: #2b71d9;
-$hit: #282a35;
-$yellow: #efc954;
-$blue: #047aed;
-$dark-purple: #152236;
-$light-purple: #19263c;
-$very-light-purple: #253450;
