--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -29,8 +29,7 @@ body {
   color: $black;
   background: $white;
   line-height: 1.5;
-  font-weight: 300;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 canvas {
