--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,6 +1,8 @@
 h1 {
   @include font-size($h1-font-sizes);
+  font-family: 'Roboto', sans-serif;
   margin: 0;
+  font-weight: 700;
 }
 
 h2 {
@@ -11,7 +13,6 @@ h2 {
 
 h4 {
   margin-top: 0;
-  font-weight: 300;
 }
 
 h1,
@@ -19,6 +20,13 @@ h2,
 h3 {
   margin: 0;
   padding: 0;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 400;
 }
 
