Add funky colors

--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -26,8 +26,8 @@ body {
 body {
   position: relative;
   font-size: 16px;
-  color: $black;
-  background: $white;
+  color: $red;
+  background: $yellow;
   line-height: 1.5;
   font-family: 'Roboto Condensed', sans-serif;
 }
