--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,6 +1,9 @@
 $white: #fff;
 $black: #000;
-$gray: #b7bbb4;
+$gray: #fafafa;
 $selection: rgba(147, 138, 130, 0.25);
 $border: rgba(147, 138, 130, 0.25);
+$blue: #332acd;
+$yellow: #ffd80b;
+$red: #ff0004;
 $body: $black;
