--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,10 @@
 .header {
   @include transition(all 300ms ease-in-out);
   position: fixed;
+  color: $yellow;
+  background-color: $blue;
   width: 100%;
-  padding: 30px 0;
+  padding: 15px 0;
   z-index: 2;
 
   h1 {
@@ -11,8 +13,6 @@
 
   &.unpinned,
   &.pinned {
-    background-color: $white;
-    padding: 15px 0;
 
     h1 {
       @include font-size($h1-headroom-sizes);
