--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -5,6 +5,8 @@
 }
 
 .data {
+  color: $yellow;
+  background-color: $blue;
   padding: 100px 0 50px;
 }
 
@@ -16,7 +18,7 @@
 .movies {
   position: relative;
   width: 100%;
-  padding: 0 0 50px;
+  padding: 50px 0;
 }
 
 .movies__tickets {
@@ -40,14 +42,12 @@
 }
 
 .movies__ticket__content {
-  color: $black;
+  border-top: 1px solid $blue;
   padding: 25px 0;
-  border-top: 1px solid $black;
 }
 
 .movies__theatres {
   margin: 0;
-  padding: 5px;
-  background-color: #ffffaa;
+  padding: 5px 0;
   border-radius: 5px;
 }
