--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -1,6 +1,9 @@
 $white: #fff;
-$black: #000;
-$gray: #fafafa;
+$black: #373737;
+$black-light: #4b4b4b;
+$gray: #d0d0d0;
+$gray-mid: #9e9e9e;
+$gray-dark: #7f7f7f;
 $selection: rgba(147, 138, 130, 0.25);
 $border: rgba(147, 138, 130, 0.25);
 $blue: #332acd;
