--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -26,10 +26,10 @@ body {
 body {
   position: relative;
   font-size: 16px;
-  color: $red;
-  background: $yellow;
+  color: $gray;
+  background: $black-light;
   line-height: 1.5;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Mono', monospace;
 }
 
 canvas {
