--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,8 +1,7 @@
 h1 {
   @include font-size($h1-font-sizes);
-  font-family: 'Roboto', sans-serif;
   margin: 0;
-  font-weight: 700;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -20,14 +19,6 @@ h2,
 h3 {
   margin: 0;
   padding: 0;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
 }
 
 h3,
