--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,21 +1,29 @@
 .header {
   @include transition(all 300ms ease-in-out);
   position: fixed;
-  color: $yellow;
-  background-color: $blue;
+  color: $gray;
+  background-color: $black;
   width: 100%;
   padding: 15px 0;
   z-index: 2;
 
-  h1 {
-    @include transition(all 300ms ease-in-out);
-  }
-
   &.unpinned,
   &.pinned {
 
-    h1 {
+    .header__heading {
       @include font-size($h1-headroom-sizes);
+    }
+  }
+}
+
+.header__heading {
+  a {
+    @include transition(all 300ms ease-in-out);
+    color: $gray;
+    text-decoration: none;
+
+    &:hover {
+      color: $gray-mid;
     }
   }
 }
