--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -29,7 +29,7 @@ body {
   color: $gray;
   background: $black-light;
   line-height: 1.5;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Inconsolata', monospace;
 }
 
 canvas {
