--- a/assets/scss/helpers/_maps.scss
+++ b/assets/scss/helpers/_maps.scss
@@ -11,8 +11,9 @@ $h1-headroom-sizes: (
 );
 
 $h2-font-sizes: (
-  null: 18px,
-  480px: 1.125em
+  null: 20px,
+  480px: 1.25em,
+  768px: 1.5rem
 );
 
 $h3-font-sizes: (
