--- a/assets/scss/helpers/_maps.scss
+++ b/assets/scss/helpers/_maps.scss
@@ -1,13 +1,13 @@
 // Maps
 
 $h1-font-sizes: (
-  null: 28px,
-  320px: 1.75em
+  null: 24px,
+  1024px: 1.75rem
 );
 
 $h1-headroom-sizes: (
-  null: 18px,
-  320px: 1.5em
+  null: 24px,
+  1024px: 1.5rem
 );
 
 $h2-font-sizes: (
