Work on content

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  @include clearfix;
   @include transition(all 300ms ease-in-out);
   position: fixed;
   color: $gray;
@@ -9,6 +10,7 @@
 
   &.unpinned,
   &.pinned {
+    background-color: $hit;
 
     .header__heading {
       @include font-size($h1-headroom-sizes);
@@ -17,6 +19,8 @@
 }
 
 .header__heading {
+  float: left;
+
   a {
     @include transition(all 300ms ease-in-out);
     color: $gray;
@@ -25,5 +29,19 @@
     &:hover {
       color: $gray-mid;
     }
+  }
+}
+
+.header__link {
+  @include transition(all 300ms ease-in-out);
+  color: $black;
+  background-color: $gray;
+  border-radius: 5px;
+  padding: 5px 10px;
+  text-decoration: none;
+  float: right;
+
+  &:hover {
+    color: $hit;
   }
 }
