--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -23,6 +23,15 @@ body {
   height: 100%;
 }
 
+a {
+  @include transition(color 300ms ease-in-out);
+  color: $hit;
+
+  &:hover {
+    color: $gray;
+  }
+}
+
 body {
   position: relative;
   font-size: 16px;
