--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -25,8 +25,6 @@
   }
   @include size(100%, 300px);
   position: relative;
-  margin-left: -5px;
-  margin-right: -5px;
   margin-bottom: 50px;
 }
 
@@ -43,11 +41,11 @@
 
 .movies {
   @include screen-below(768px) {
-    padding: 25px 0;
+    padding: 25px 0 5px;
   }
   position: relative;
   width: 100%;
-  padding: 50px 0;
+  padding: 50px 0 30px;
 }
 
 .movies__tickets {
@@ -81,4 +79,37 @@
   margin: 0;
   padding: 5px 0;
   border-radius: 5px;
+}
+
+.info {
+  @include screen-above(768px) {
+    padding: 45px 0;
+  }
+  background-color: $hit;
+  padding: 20px 0;
+
+  p {
+    &:first-of-type {
+      margin-top: 0;
+    }
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.info__item {
+  @include make-flex(12);
+  @include screen-above(768px) {
+    @include update-flex(6);
+  }
+}
+
+.info__blurb {
+  @include screen-between(768px, 1280px) {
+    padding-right: 25px;
+  }
+  @include screen-above(1280px) {
+    padding-right: 50px;
+  }
 }
