--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -100,13 +100,19 @@
 
 .info__item {
   @include make-flex(12);
-  @include screen-above(768px) {
+  @include screen-above(1024px) {
     @include update-flex(6);
   }
 }
 
+.info__item--image {
+  @include screen-below(1024px) {
+    margin-top: 25px;
+  }
+}
+
 .info__blurb {
-  @include screen-between(768px, 1280px) {
+  @include screen-between(1024px, 1280px) {
     padding-right: 25px;
   }
   @include screen-above(1280px) {
