Add smooth scroll

--- a/assets/scss/base/_general.scss
+++ b/assets/scss/base/_general.scss
@@ -8,9 +8,14 @@
   color: $black;
   background: $selection;
 }
+
 ::selection {
   color: $black;
   background: $selection;
+}
+
+:focus {
+  outline: none;
 }
 
 img {
